--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1141,6 +1141,14 @@ section.lazy-placeholder:after {
 .cid-s7DgiB9h0O .img-text {
   color: #c1c1c1;
 }
+.cid-s7ErTNWlsP {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #dbd4b8, #25aab2);
+}
+.cid-s7ErTNWlsP .btn {
+  margin: 0 0 .5rem 0;
+}
 .cid-qTkAaeaxX5 {
   padding-top: 60px;
   padding-bottom: 60px;
